--- a/03.zone-benefits-grid.png/index.html
+++ b/03.zone-benefits-grid.png/index.html
@@ -2,35 +2,42 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="./assets/scss/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet"> 
 	<title>03.zone-benefits-grid</title>
 </head>
 <body>
-	<div class="container">
-		<div class="image">
-			<img src="./grunt.png" alt="Grunt">
-			<img src="./gulp.png" alt="Gulp">
-			<img src="./octocat.png" alt="Git Hooks">
-			<img src="./npm.png" alt="NPM">
-		</div>
-		<div class="text">
-			<div class="grunt">
-				<h3>Grunt plugin</h3>
-				<p>Install the <h6>grunt-surge</h6> plugin, and your project is ready to use <h6>grunt deploy.</h6></p>
-			</div>
-			<div class="gulp">
-				<h3>Gulp plugin</h3>
-				<p>Install <h6>surge</h6> as a devDependency, and you're ready to use it in your Gulpfile.</p>
-			</div>
-			<div class="git">
-				<h3>Git Hooks</h3>
-				<p>Deploy every time you <h6>push</h6> to GitHub., but without any branch juggling.</p>
-			</div>
-			<div class="npm">
-				<h3>npm run scripts</h3>
-				<p>Install the Surge CLI tool, and your project is ready to use in your <h6>package.json.</h6></p>
-			</div>
-		</div>
+	<div class="grid-container">
+		
+			<section class="grid-image">
+				<img src="./assets/img/grunt.png" alt="Grunt">
+			</section>
+				<div class="grid-text">
+					<h3>Grunt plugin</h3>
+					<p>Install the <strong>grunt-surge</strong></br>plugin, and your project is ready</br> to use <strong>grunt deploy.</strong></p>
+				</div>
+			<section class="grid-image">
+				<img src="./assets/img/gulp.png" alt="Gulp">
+			</section>
+				<div class="grid-text">
+					<h3>Gulp plugin</h3>
+					<p>Install <strong>surge</strong> as a</br> devDependency, and you're</br> ready to use it in your Gulpfile.</p>
+				</div>
+			<section class="grid-image">
+				<img src="./assets/img/octocat.png" alt="Git Hooks">
+			</section>
+				<div class="grid-text">
+					<h3>Git Hooks</h3>
+					<p>Deploy every time you <strong>push</strong> to</br> GitHub., but without any branch</br> juggling.</p>
+				</div>
+			<section class="grid-image">
+				<img src="./assets/img/npm.png" alt="NPM">
+			</section>
+				<div class="grid-text">
+					<h3>npm run scripts</h3>
+					<p>Install the Surge CLI tool, and</br> your project is ready to use in</br> your <strong>package.json.</strong></p>
+				</div>	
 	</div>
 </body>
 </html>
